- https://github.com/eclipse-syson/syson/issues/1247[#1247] [explorer] Type new `ViewUsage` from _Explorer_ view with _General View_ `ViewDefinition`.
When end-users click on _New Object_ on a semantic element, and select a `ViewUsage`, then a `ViewUsage` typed by default with the _General View_ `ViewDefinition` from the standard library will be created.

=== New features


== v2025.4.0

=== Shapes

- Add support for library publication

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/1079[#1079] [metamodel] Align metamodel to SysMLv2 2024-12 specification released on December 2024(see https://www.omg.org/spec/SysML/ for more details) and KerML 2024-12 specification released on December 2024(see https://www.omg.org/spec/KerML/ for more details).
Please download all your models/projects before upgrading to 2025.4.0.
The new concepts are:
* `CrossSubsetting` (inherits from `Subsetting`)
* `IndexExpression` (inherits from `OperatorExpression`)
The new operations are:
* `Usage#referencedTargetFeature()`
* `Type#supertypes(EBoolean)`
* `Type#removedRedefinedFeatures(Membership)`
* `Type#nonPrivateMemberships(Namespace, Type, EBoolean)`
* `Type#inheritableMemberships(Namespace, Type, EBoolean)`
* `Type#multiplicities()`
* `Namespace#membershipsOfVisibility(VisibilityKind, Namespace)`
* `Membership#allRedefinedFeatures()`
* `Feature#allRedefinedFeatures()`
* `Feature#asCartesianProduct()`
* `Feature#isCartesianProduct()`
* `Feature#isOwnedCrossFeature()`
* `Feature#ownedCrossFeature()`
The new references are:
* `CrossSubsetting#crossedFeature`
* `CrossSubsetting#crossingFeature`
* `Feature#crossFeature`
* `Feature#ownedCrossSubsetting`
* `Annotation#ownedAnnotatingElement`
* `AnnotatingElement#owningAnnotatingRelationship`
* `FlowConnectionDefinition#flowConnectionEnd`
The modifications are:
* `Usage#nestedConnection` now subsets `Usage#nestedUsage` instead of `Usage#nestedPart`